--- a/src/less/components/elements.less
+++ b/src/less/components/elements.less
@@ -31,5 +31,9 @@
 
   &_item {
     position: absolute;
+    &--active {
+      border-radius: 5px;
+      border: 1px solid grey;      
+    }
   }
 }
