drag-n-drop rethink

--- a/src/less/components/elements.less
+++ b/src/less/components/elements.less
@@ -20,6 +20,7 @@
     &_wrapper {
       display: none;
       position: absolute;
+      z-index: 5;
       top: 0;
       left: 0;
       background-color: white;
@@ -31,6 +32,8 @@
 
   &_item {
     position: absolute;
+    padding: 10px;
+    z-index: 2;
     &--active {
       border-radius: 5px;
       border: 1px solid grey;      
