--- a/src/less/components/elements.less
+++ b/src/less/components/elements.less
@@ -47,23 +47,25 @@
       margin-left: -1px;
       margin-top: -1px;
       border: 1px solid grey;
-      .ui-rotatable-handle {
+      .ui-rotatable-handle, .ui-resizable-handle {
         display: block !important;
       }
     }
 
     .ui-rotatable-handle {
-      display: none;
       position: absolute;
       width: 5px;
       height: 5px;
       background-color: grey;
       border: 1px solid grey;
       border-radius: 2.5px;
-      top: 50%;
+      top: -10px;
       left: 50%;
       margin-top: -2.5px;
-      margin-left: -2.5px;
+    }
+
+    .ui-resizable-handle, .ui-rotatable-handle {
+      display: none
     }
   }
 }
